jcommune-view/jcommune-web-view/src/main/webapp/resources/css/app/application.css
/* ... */
.group-caption {
    font-weight: bold;
    font-size: 120%;
}

pre.prettyprint {
    margin: 6px;
}

.two-list-selector-control {
    padding: 2px 0px;
}

.text_errorpage {
    max-width: 420px;
    display: inline-block;
}

.linear_transitions {
    transition:all .2s linear;
    -o-transition:all .2s linear;
    -moz-transition:all .2s linear;
    -webkit-transition:all .2s linear;
}

.image_errorpage {
    padding-left: 420px;
}

@media (max-width: 639px) {
    .image_errorpage {
        display: none;
    }
}

#lang-selector-toggle-li .tooltip {
    white-space: pre-wrap;
    max-width: 61px;
}

.full-width {
    width: 100%;
}

.plugin-checkbox {
    /* This style uses to select all plugin activating checkboxes from plugins list page*/
}

.plugin-popup {
    position: absolute;
    left: 50%;
    padding: 0.7em 1em;
    font-size: 15px;
    margin-right: 10%;
}

.badge {
    display: inline-block;
    padding: 2px 4px;
    font-size: 11.844px;
    font-weight: bold;
    line-height: 14px;
    color: #ffffff;
    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
    white-space: nowrap;
    vertical-align: baseline;
    background-color: #999999;
}

.badge {
    padding-right: 9px;
    padding-left: 9px;
    -webkit-border-radius: 9px;
    -moz-border-radius: 9px;
    border-radius: 9px;
}

.label-inverse, .badge-inverse {
    background-color: #444444;
}

.new-topic-buttons {
    float: left;
    width: 120px;
    margin-bottom: 10px;
}

